// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Typography Components Body Snapshot 1`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="body"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#555C70",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 24,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components BodyMonospace Snapshot 1`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="body"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {
        "letterSpacing": 0.5,
      },
      {
        "color": "#555C70",
        "fontFamily": "DM Mono",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "500",
        "lineHeight": 24,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components BodySmall Snapshot 1`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="footnote"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#555C70",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 21,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components BodySmall Snapshot 2`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="footnote"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 21,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components BodySmall Snapshot 3`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="footnote"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 21,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components BodySmall Snapshot 4`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="footnote"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#C02927",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 21,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components BodySmall Snapshot 5`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="footnote"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 21,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components CTA Snapshot 1`] = `
<Text
  allowFontScaling={false}
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 20,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H1 Snapshot 1`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="largeTitle"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#0E0F13",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 28,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 42,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H1 Snapshot 2`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="largeTitle"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 28,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 42,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H2 Snapshot 1`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="title1"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#0E0F13",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 28,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 34,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 1`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="title2"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#0E0F13",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 22,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 33,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 2`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="title2"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#CCD4DC",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 22,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 33,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 3`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="title2"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 22,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 33,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 4`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="title2"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 22,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 33,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H3 Snapshot 5`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="title2"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#0E0F13",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 22,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 33,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 1`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="title3"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#0E0F13",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 20,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 24,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 2`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="title3"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 20,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 24,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H4 Snapshot 3`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="title3"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 20,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 24,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 1`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="subheadline"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {
        "letterSpacing": 0.5,
        "textTransform": "uppercase",
      },
      {
        "color": "#0E0F13",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 16,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 2`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="subheadline"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {
        "letterSpacing": 0.5,
        "textTransform": "uppercase",
      },
      {
        "color": "#475A6D",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 16,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 3`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="subheadline"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {
        "letterSpacing": 0.5,
        "textTransform": "uppercase",
      },
      {
        "color": "#0073E6",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 16,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H5 Snapshot 4`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="subheadline"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {
        "letterSpacing": 0.5,
        "textTransform": "uppercase",
      },
      {
        "color": "#FFFFFF",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 16,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components H6 Snapshot 1`] = `
<Text
  allowFontScaling={false}
  dynamicTypeRamp="headline"
  maxFontSizeMultiplier={1.5}
  style={
    [
      {},
      {
        "color": "#0E0F13",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 18,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 24,
      },
    ]
  }
>
  Text
</Text>
`;

exports[`Test Typography Components Link Snapshot 1`] = `
<Text
  accessibilityRole="link"
  allowFontScaling={false}
  dynamicTypeRamp="body"
  maxFontSizeMultiplier={1.5}
  onPress={[Function]}
  style={
    [
      {
        "textDecorationLine": "underline",
      },
      {
        "color": "#0B3EE3",
        "fontFamily": "Titillium Sans Pro",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 24,
      },
    ]
  }
>
  Text
</Text>
`;
